# platform_external_qemu

./: #Makefile.common#  .clang-tidy  .gclient  .gitignore  .gitmodules  .gn  Android.mk  BUILD.bazel  BUILD.gn  CHANGES.TXT  CMakeLists.txt  DEPS  GNUmakefile  INSTALL  MAINTAINERS  Makefile  Makefile.android  Makefile.android-emu.mk  Makefile.common  Makefile.common.mk  Makefile.crash-service.mk  Makefile.objs  Makefile.qemu-launcher  Makefile.qemu-launcher.mk  Makefile.qemu1-common.mk  Makefile.qemu1-target.mk  Makefile.qemu2  Makefile.target  Makefile.tests  Makefile.tests.mk  Makefile.top.mk  OWNERS  README  README.MD  README.md  TEST.TEST  VERSION  accel.c  aio-android.c  aio-posix.c  (+175 more)
android/: BUILD.gn  BUILDCONFIG.gn  CMakeLists.txt  CharSerialLine.cpp  CharSerialLine.h  Info.plist  OpenglEsPipe.cpp  OpenglEsPipe.h  adb-key-preset.c  adb-key-preset.h  adb-qemud.c  adb-qemud.h  adb-server.c  adb-server.cpp  adb-server.h  aeb.c  aeb.h  android-constants.c  android-device.c  android-device.h  android.h  android.mk  android_emulator_bridge.c  android_emulator_bridge.h  asan_overrides  async-console.c  async-console.h  async-io-common.h  async-socket-connector.c  async-socket-connector.h  async-socket.c  async-socket.h  async-utils.c  async-utils.h  battery-agent-impl.h  battery-agent.h  battery-if-impl.c  battery-if-impl.h  battery-if.h  boot-properties.c  (+195 more)
android-qemu2-glue/: .clang-format  CMakeLists.txt  adbkey.cpp  adbkey.h  android_pubkey.cpp  android_pubkey.h  android_qemud.cpp  android_qemud.h  android_renderer.cpp  android_renderer.h  audio-capturer.cpp  audio-capturer.h  audio-input.cpp  audio-input.h  audio-output.cpp  audio-output.h  bootconfig.cpp  bootconfig.h  display.cpp  display.h  drive-share.cpp  drive-share.h  dtb.cpp  dtb.h  file_ram_unittest.cpp  looper-qemu.cpp  looper-qemu.h  main.cpp  net-android.cpp  net-android.h  qemu-automation-agent-impl.cpp  qemu-battery-agent-impl.c  qemu-battery-agent-impl.cpp  qemu-bug-report-agent-impl.cpp  qemu-car-data-agent-impl.cpp  qemu-cellular-agent-impl.c  qemu-clipboard-agent-impl.cpp  qemu-console-factory.cpp  qemu-console-factory.h  qemu-control-impl.h  (+33 more)
android-qemu2-glue/emulation/: CharSerialLine.cpp  CharSerialLine.h  DmaMap.cpp  DmaMap.h  Frame.cpp  Frame.h  HostapdController.cpp  HostapdController.h  HostmemAlloc.cpp  HostmemAlloc.h  Ieee80211Frame.cpp  Ieee80211Frame.h  NetsimWifiForwarder.cpp  NetsimWifiForwarder.h  VirtioGpuTimelines.cpp  VirtioGpuTimelines.fbs  VirtioGpuTimelines.h  VirtioWifiForwarder.cpp  VirtioWifiForwarder.h  VmLock.cpp  VmLock.h  WifiService.cpp  WifiService.h  android_address_space_device.cpp  android_address_space_device.h  android_pipe_device.cpp  android_pipe_device.h  balloon_driver_manager.cpp  balloon_driver_manager.h  charpipe.c  charpipe.h  export.h  goldfish_hostmem.cpp  goldfish_hostmem.h  goldfish_sync.cpp  goldfish_sync.h  libslirp_driver.cpp  libslirp_driver.h  migration-stubs.h  serial_line.cpp  (+19 more)
android-qemu2-glue/netsim/: BluetoothPacketProtocol.cpp  BluetoothPacketProtocol.h  CMakeLists.txt  NetsimWifiForwarder.cpp  NetsimWifiForwarder.h  PacketProtocol.h  PacketStreamTransport.cpp  PacketStreamTransport.h  UwbPacketProtocol.cpp  UwbPacketProtocol.h  h4_parser.cc  h4_parser.h  libslirp_driver.cpp  libslirp_driver.h  netsim.h  qemu-netsim-agent-impl.cpp  qemu-packet-stream-agent-impl.cpp
android-qemu2-glue/proxy/: slirp_proxy.cpp  slirp_proxy.h
android-qemu2-glue/scripts/: gen-acpi-hex-files.bash  gen-cmake.py  gen-qemu2-sources-mk.py
android-qemu2-glue/stubs/: win32-stubs.c
android-qemu2-glue/telephony/: modem_init.c
android-qemu2-glue/tests/: VirtioGpuTimelines_unittest.cpp  build_consistency.c
android-qemu2-glue/utils/: register_crash_info.cpp  register_crash_info.h  register_crash_info_unittest.cpp  stream.cpp  stream.h
android/android-base/: CMakeLists.txt
android/android-base-net/: CMakeLists.txt
android/android-emu/: BUILD.gn  CMakeLists.txt  Makefile.android-emu.mk  Makefile.crash-service.mk  android-emu-base.cmake  android-emu.cmake  android-libui.cmake  crash-service.cmake
android/android-emu-base/: CMakeLists.txt  android-emu-base.cmake
android/android-emugl/: Android.mk  CMakeLists.txt  Cmake.mk  DESIGN  common.mk  googletest.mk
android/android-files/: CMakeLists.txt
android/android-grpc/: CMakeLists.txt  adb_service.proto  control_socket.proto  default.profraw  emulated_bluetooth.proto  emulated_bluetooth_device.proto  emulator_controller.proto  emulator_stats.proto  extended_controls_service.proto  ipc_test_service.proto  snapshot-service.proto  snapshot_service.proto  test_echo_service.proto  ui_controller_service.proto  waterfall-client.proto  waterfall.proto
android/android-location/: CMakeLists.txt
android/android-metrics/: CMakeLists.txt
android/android-net/: CMakeLists.txt
android/android-protobuf/: CMakeLists.txt
android/android-studio/: CMakeLists.txt
android/android-ui/: CMakeLists.txt  README.md
android/android-webrtc/: CMakeLists.txt  README.MD  README.md
android/android_emu_flutter/: README.md  pubspec.yaml
android/avd/: hardware-properties.ini  hw-config-defs.h  hw-config.c  hw-config.h  info.c  info.h  keys.h  scanner.c  scanner.h  util.c  util.h  util_unittest.cpp  util_wrapper.cpp
android/base/: ArraySize.h  ArraySize_unittest.cpp  Compiler.h  Debug.cpp  EintrWrapper.h  EintrWrapper_unittest.cpp  EnumFlags.h  Limits.h  Log.cpp  Log.h  Log_unittest.cpp  Optional.h  Optional_unittest.cpp  SocketDrainer.cpp  SocketDrainer.h  String.cpp  String.h  StringFormat.cpp  StringFormat.h  StringFormat_unittest.cpp  StringParse.cpp  StringParse.h  StringParse_unittest.cpp  StringView.cpp  StringView.h  StringView_unittest.cpp  String_unittest.cpp  TimeValue.cpp  TimeValue.h  TypeTraits.h  TypeTraits_unittest.cpp  TypeUtils.h  TypeUtils_unittest.cpp  Uri.cpp  Uri.h  Uri_unittest.cpp  Uuid.cpp  Uuid.h  Version.cpp  Version.h  (+3 more)
android/bluetooth/: CMakeLists.txt
android/camera/: bmp-reader.c  bmp-reader.h  camera-capture-linux.c  camera-capture-mac.c  camera-capture-mac.m  camera-capture-windows.c  camera-list.h  (+14 more)
(+11691 files in other folders)
